--- a/SampleRun.ipynb
+++ b/SampleRun.ipynb
@@ -1,12 +1,47 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Four new classes have been added to the 'ClassDefinitions.py':\n",
+    "\n",
+    "1) findFreeLunchMetabolites\n",
+    "\n",
+    "2) findIndividuallyProducibleFLM\n",
+    "\n",
+    "3) findMinimalFreeLunch\n",
+    "\n",
+    "4) findFreeLunchWitnesses\n",
+    "\n",
+    "All function required for these classes are imported from:\n",
+    "\n",
+    "1) free_lunch_witnesses.py\n",
+    "\n",
+    "2) free_lunch_analysis.py\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Step 1"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "%run -i 'ModelParsing.py'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Step 2"
    ]
   },
   {
@@ -18,19 +53,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Warning: no candidate for extra, outside found in the list\n"
+      "Warning: no candidate for extra, outside found in the list\n",
+      "Warning: multiple candidates for biomass found in the list\n",
+      "0) E. coli biomass objective function (iJO1366) - WT - with 53.95 GAM estimate 1) E. coli biomass objective function (iJO1366) - core - with 53.95 GAM estimate\n",
+      "Please select the correct string from the list above and enter its number, or -1 if none \n",
+      "0\n"
      ]
     }
    ],
    "source": [
-    "model =parseSBML('/home/hzabeti/qsopt-ex/build/python-qsoptex/MongooseGUI3/Models/SBML/iNJ661.xml')"
+    "model =parseSBML('/home/hzabeti/qsopt-ex/build/python-qsoptex/MongooseGUI3/Models/SBML/iY75_1357.xml')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Step 3"
    ]
   },
   {
@@ -41,14 +87,14 @@
     "1) Status of \"No Free Lunch Condition\"\n",
     "2) Number of free lunch metabolites\n",
     "\n",
-    "and will return \n",
-    "2) List of indicies of all possible free lunch metabolites \n",
-    "3) List of names of all possible free lunch metabolites"
+    "And will return \n",
+    "3) List of indicies of all possible free lunch metabolites \n",
+    "4) List of names of all possible free lunch metabolites"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -56,12 +102,36 @@
      "output_type": "stream",
      "text": [
       "No Free Lunch condition: Not satisfied!\n",
-      "Optimum solution and the number of all possible free lunch metabolites 192\n"
+      "Optimum solution and the number of all possible free lunch metabolites 3\n"
      ]
     }
    ],
    "source": [
     "flm_index_list,flm_list = model.findFreeLunchMetabolites()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[102, 290, 463] ['M_h_c', 'M_h_e', 'M_h_p']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(flm_index_list,flm_list)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Step 4"
    ]
   },
   {
@@ -71,21 +141,21 @@
     "Finding individually producible Free Lunch Metabolite: findIndividuallyProducibleFLM takes the model as input and will print\n",
     "1) Number of individually producible free lunch metabolites \n",
     " \n",
-    "and will return \n",
+    "Also it will return \n",
     "2) List of indicies of individually producible free lunch metabolites \n",
     "3) List of names of individually producible free lunch metabolites "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of individually producible free lunch metabolites 192\n"
+      "Number of individually producible free lunch metabolites 3\n"
      ]
     }
    ],
@@ -94,28 +164,65 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[102, 290, 463] ['M_h_c', 'M_h_e', 'M_h_p']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(ind_flm_index_list,ind_flm_list)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Step 5"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "Finding Minimal Free Lunch: findMinimalFreeLunch takes \n",
+    "\n",
     "1) model\n",
+    "\n",
     "2) desirable free lunch metabolites index list(optional). The default value is None, and in this case Mongoose would find a free lunch metabolite(FLM) and the minimal free lunch with respect to that FLM. \n",
+    "\n",
     "3) print minimal free lunch equation status(optional). The default value is True.\n",
+    "\n",
     "as input and will print\n",
+    "\n",
     "1) Number of iteration needed in the re-weighted linear program \n",
+    "\n",
     "2) Number of reactions involved in the free lunch before extracting the minimal subset\n",
+    "\n",
     "3) Status of each reaction(whether it is in the minimal subset)\n",
+    "\n",
     "4) List of reactions that are involved in the minimal free lunch\n",
+    "\n",
     "5) minimal free lunch equation\n",
+    "\n",
     "and will return \n",
+    "\n",
     "6) List of reactions that are involved in the minimal free lunch\n",
+    "\n",
     "7) List of reactions that are involved in the minimal free lunch with their coefficients\n",
+    "\n",
     "8) List of free lunch metabolites that has been produce by this free lunch and their amount  "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -123,22 +230,19 @@
      "output_type": "stream",
      "text": [
       "Number of iteration:  0\n",
-      "Number of reactions involved in FL: 4\n",
+      "Number of reactions involved in FL: 3\n",
       "------------------------------------------------------------\n",
-      "Checking index:  41\n",
-      "This index is in the miniaml set 41\n",
-      "Checking index:  42\n",
-      "This index is in the miniaml set 42\n",
-      "Checking index:  43\n",
-      "This index is in the miniaml set 43\n",
-      "Checking index:  44\n",
-      "This index is in the miniaml set 44\n",
-      "Minimal free lunch indexes: [41, 42, 43, 44]\n",
+      "Checking index:  1948\n",
+      "This index is in the minimal set 1948\n",
+      "Checking index:  2019\n",
+      "This index is in the minimal set 2019\n",
+      "Checking index:  2727\n",
+      "This index is in the minimal set 2727\n",
+      "Minimal free lunch indexes: [1948, 2019, 2727]\n",
       "------------------ minimal free lunch equation----------------\n",
-      "-1*(1 M_fe2_c[c] + 1 M_scl2_c[c] -> 2 M_h_c[c] + 1 M_sheme_c[c])\n",
-      "1*(1 M_fe2_c[c] + 1 M_scl_c[c] -> 3 M_h_c[c] + 1 M_sheme_c[c])\n",
-      "-1*(1 M_dscl_c[c] + 1 M_nad_c[c] -> 1 M_h_c[c] + 1 M_nadh_c[c] + 1 M_scl2_c[c])\n",
-      "1*(1 M_dscl_c[c] + 1 M_nad_c[c] -> 1 M_h_c[c] + 1 M_nadh_c[c] + 1 M_scl_c[c])\n",
+      "1*(1 M_atp_c[c] + 1 M_h2o_c[c] -> 1 M_amp_c[c] + 1 M_h_c[c] + 1 M_ppi_c[c])\n",
+      "-1*(1 M_atp_c[c] + 1 M_coa_c[c] + 1 M_pac_c[c] -> 1 M_amp_c[c] + 1 M_phaccoa_c[c] + 1 M_ppi_c[c])\n",
+      "-1*(1 M_h2o_c[c] + 1 M_phaccoa_c[c] -> 1 M_coa_c[c] + 1 M_pac_c[c])\n",
       "-----------\n",
       "1*(M_h_c)\n",
       "-------------------------------------------------------------\n"
@@ -147,6 +251,64 @@
    ],
    "source": [
     "minimal_free_lunch,free_lunch_list,free_lunch_meta = model.findMinimalFreeLunch()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1948, 2019, 2727]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(minimal_free_lunch)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(1948, 1), (2019, -1), (2727, -1)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(free_lunch_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(102, Fraction(1, 1))]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(free_lunch_meta)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Step 6"
    ]
   },
   {
@@ -171,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -182,58 +344,47 @@
       "CPXPARAM_Simplex_Tolerances_Feasibility          1.0000000000000001e-09\n",
       "CPXPARAM_Read_DataCheck                          1\n",
       "CPXPARAM_MIP_Tolerances_Integrality              1.0000000000000001e-15\n",
-      "Found incumbent of value 506.000000 after 0.00 sec. (0.19 ticks)\n",
-      "Tried aggregator 2 times.\n",
-      "MIP Presolve eliminated 294 rows and 287 columns.\n",
-      "MIP Presolve modified 1279 coefficients.\n",
-      "Aggregator did 6 substitutions.\n",
-      "Reduced MIP has 1574 rows, 1468 columns, and 9293 nonzeros.\n",
-      "Reduced MIP has 864 binaries, 3 generals, 0 SOSs, and 0 indicators.\n",
-      "Presolve time = 0.01 sec. (8.21 ticks)\n",
-      "Probing time = 0.00 sec. (0.17 ticks)\n",
+      "Found incumbent of value 1044.000000 after 0.06 sec. (0.43 ticks)\n",
+      "Tried aggregator 3 times.\n",
+      "MIP Presolve eliminated 1118 rows and 1160 columns.\n",
+      "MIP Presolve modified 3113 coefficients.\n",
+      "Aggregator did 19 substitutions.\n",
+      "Reduced MIP has 3595 rows, 3138 columns, and 19829 nonzeros.\n",
+      "Reduced MIP has 1928 binaries, 16 generals, 0 SOSs, and 0 indicators.\n",
+      "Presolve time = 0.08 sec. (24.38 ticks)\n",
+      "Probing time = 0.00 sec. (0.29 ticks)\n",
       "Tried aggregator 1 time.\n",
-      "Reduced MIP has 1574 rows, 1468 columns, and 9293 nonzeros.\n",
-      "Reduced MIP has 864 binaries, 3 generals, 0 SOSs, and 0 indicators.\n",
-      "Presolve time = 0.00 sec. (3.46 ticks)\n",
-      "Probing time = 0.00 sec. (0.17 ticks)\n",
+      "Reduced MIP has 3595 rows, 3138 columns, and 19829 nonzeros.\n",
+      "Reduced MIP has 1928 binaries, 16 generals, 0 SOSs, and 0 indicators.\n",
+      "Presolve time = 0.02 sec. (7.53 ticks)\n",
+      "Probing time = 0.01 sec. (0.29 ticks)\n",
       "MIP emphasis: balance optimality and feasibility.\n",
       "MIP search method: dynamic search.\n",
       "Parallel mode: deterministic, using up to 8 threads.\n",
-      "Root relaxation solution time = 0.06 sec. (52.03 ticks)\n",
+      "Root relaxation solution time = 0.30 sec. (168.45 ticks)\n",
       "\n",
       "        Nodes                                         Cuts/\n",
       "   Node  Left     Objective  IInf  Best Integer    Best Bound    ItCnt     Gap\n",
       "\n",
-      "*     0+    0                          506.0000        0.0000           100.00%\n",
-      "*     0+    0                          434.0000        0.0000           100.00%\n",
-      "*     0+    0                          429.0000        0.0000           100.00%\n",
-      "      0     0        0.0000    10      429.0000        0.0000      932  100.00%\n",
-      "*     0+    0                           10.0000        0.0000           100.00%\n",
-      "      0     0        1.0000     9       10.0000     Covers: 1      933   90.00%\n",
-      "*     0+    0                            8.0000        1.0000            87.50%\n",
-      "      0     0        2.0000     8        8.0000     Covers: 1      937   75.00%\n",
-      "      0     0        2.0000     6        8.0000     Covers: 1      940   75.00%\n",
-      "      0     0        3.0000    12        8.0000     Covers: 1     1288   62.50%\n",
-      "      0     0        3.0000    10        8.0000     Covers: 1     1404   62.50%\n",
-      "*     0+    0                            6.0000        3.0000            50.00%\n",
-      "*     0+    0                            5.0000        3.0000            40.00%\n",
-      "*     0+    0                            4.0000        3.0000            25.00%\n",
-      "      0     0        cutoff              4.0000        3.5000     1404   12.50%\n",
-      "Elapsed time = 0.68 sec. (362.75 ticks, tree = 0.01 MB, solutions = 7)\n",
-      "\n",
-      "Cover cuts applied:  5\n",
+      "*     0+    0                         1044.0000        0.0000           100.00%\n",
+      "*     0+    0                          951.0000        0.0000           100.00%\n",
+      "*     0+    0                          944.0000        0.0000           100.00%\n",
+      "      0     0        0.0000     1      944.0000        0.0000     1655  100.00%\n",
+      "*     0+    0                            1.0000        0.0000           100.00%\n",
+      "      0     0        cutoff              1.0000        0.0000     1655  100.00%\n",
+      "Elapsed time = 0.54 sec. (219.46 ticks, tree = 0.01 MB, solutions = 3)\n",
       "\n",
       "Root node processing (before b&c):\n",
-      "  Real time             =    0.69 sec. (362.94 ticks)\n",
+      "  Real time             =    0.54 sec. (219.79 ticks)\n",
       "Parallel b&c, 8 threads:\n",
       "  Real time             =    0.00 sec. (0.00 ticks)\n",
       "  Sync time (average)   =    0.00 sec.\n",
       "  Wait time (average)   =    0.00 sec.\n",
       "                          ------------\n",
-      "Total (root+branch&cut) =    0.69 sec. (362.94 ticks)\n",
-      "Number of free lunch witnesses: 4\n",
-      "List of free lunch witnesses: [44, 646, 647, 879]\n",
-      "Computed y lower bound 2.554278416347382e-07\n"
+      "Total (root+branch&cut) =    0.54 sec. (219.79 ticks)\n",
+      "Number of free lunch witnesses: 1\n",
+      "List of free lunch witnesses: [2727]\n",
+      "Computed y lower bound 1.8518518518518519e-06\n"
      ]
     }
    ],
